feat: Even more API methods filled out
